update pagina historia

--- a/historia/historia.html
+++ b/historia/historia.html
@@ -18,7 +18,7 @@
         <a href="../index.html">Home</a>
         <a href="../parabens/parabens.html">Parabéns</a>
         <a href="../motivosDeTeamar/motivosDeTeamar.html">Motivos de te amar</a>
-        <a href="../jogo/index.html">Jogo quem ama mais?</a>
+        <a href="../jogo/jogo.html">Jogo quem ama mais?</a>
     </nav>
 
     <main>
